<resources>
    <string name="app_name">AndroidCalculator</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="open_bracket">" ( "</string>
    <string name="close_bracket">" ) "</string>
<!--    <string name="square_pow">x<sup>2</sup></string>-->
<!--    <string name="square_root">√</string>-->
<!--    <string name="pow">x<sup>y</sup></string>-->
<!--    <string name="root"><sup>x</sup>√y</string>-->
    <string name="sin">" sin "</string>
    <string name="cos">" cos "</string>
    <string name="tan">" tan "</string>
    <string name="cot">" cot "</string>
    <string name="ln"> ln </string>
    <string name="log">log<sub>x</sub>y</string>
    <string name="square_pow">" ^ 2 "</string>
    <string name="square_root">" 2 √ "</string>
    <string name="pow">" ^ "</string>
    <string name="root">" √ "</string>
    <string name="percent">" % "</string>
    <string name="division">" / "</string>
    <string name="multiplication">" x "</string>
    <string name="subtraction">" - "</string>
    <string name="addition">" + "</string>
    <string name="execute">=</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>