<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    style="@style/layout_style">
    <TextView
        android:id="@id/screen"
        style="@style/screen_style" />
    <LinearLayout
        style="@style/numpad_style">
        <LinearLayout
            style="@style/numpad_row_style">
            <Button
                style="@style/unary_op_button_style"
                android:text="@string/open_bracket" />
            <Button
                style="@style/unary_op_button_style"
                android:text="@string/close_bracket" />
            <Button
                style="@style/del_button_style"
                android:text="@string/clear"
                android:onClick="clear"/>
            <Button
                style="@style/del_button_style"
                android:text="@string/backspace"
                android:onClick="backspace"/>
        </LinearLayout>
        <LinearLayout
            style="@style/numpad_row_style">
            <Button
                style="@style/unary_op_button_style"
                android:text="@string/percent" />
            <Button
                style="@style/unary_op_button_style"
                android:text="@string/square_root"/>
            <Button
                style="@style/unary_op_button_style"
                android:text="@string/pow"/>
            <Button
                style="@style/op_button_style"
                android:text="@string/division"/>
        </LinearLayout>
        <LinearLayout
            style="@style/numpad_row_style">
            <Button
                style="@style/num_button_style"
                android:text="@string/seven"/>
            <Button
                style="@style/num_button_style"
                android:text="@string/eight"/>
            <Button
                style="@style/num_button_style"
                android:text="@string/nine"/>
            <Button
                style="@style/op_button_style"
                android:text="@string/multiplication"/>
        </LinearLayout>
        <LinearLayout
            style="@style/numpad_row_style">
            <Button
                style="@style/num_button_style"
                android:text="@string/four"/>
            <Button
                style="@style/num_button_style"
                android:text="@string/five"/>
            <Button
                style="@style/num_button_style"
                android:text="@string/six"/>
            <Button
                style="@style/op_button_style"
                android:text="@string/addition"/>
        </LinearLayout>
        <LinearLayout
            style="@style/numpad_row_style">
            <Button
                style="@style/num_button_style"
                android:text="@string/one"/>
            <Button
                style="@style/num_button_style"
                android:text="@string/two"/>
            <Button
                style="@style/num_button_style"
                android:text="@string/three"/>
            <Button
                style="@style/op_button_style"
                android:text="@string/subtraction"/>
        </LinearLayout>
        <LinearLayout
            style="@style/numpad_row_style">
            <Button
                style="@style/num_button_style"
                android:layout_weight="2"
                android:text="@string/zero"/>
            <Button
                style="@style/num_button_style"
                android:text="@string/point"/>
            <Button
                style="@style/op_button_style"
                android:text="@string/execute"
                android:onClick="execute"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>